Added static dependencies

--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -3,8 +3,7 @@
 <!--<html lang="en">-->
 <head>
     <link rel="stylesheet" href="/static/jstree/dist/themes/default/style.min.css"/>
-    <link rel="stylesheet"
-          href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/bootstrap-4.0.0a5.css"/>
     <link rel="stylesheet" href="/static/mainstyle.css"/>
 </head>
 <body>
@@ -116,6 +115,6 @@
 
 </script>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="/static/jquery-1.11.1.js"></script>
 <script src="/static/jstree/dist/jstree.min.js"></script>
 <script src="/static/tree.js"></script>
