--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -38,13 +38,13 @@
                                                id="datalabel"/></td>
                     </tr>
                     <tr hidden class="clinicaldata">
-                        <td>Magic #5</td>
+                        <td>DLS</td>
                         <td width="90%"><input style="width:inherit;"
                                                class="form-control form-control-sm" type="text"
                                                id="magic5"/></td>
                     </tr>
                     <tr hidden class="clinicaldata">
-                        <td>Magic #6</td>
+                        <td>CVCD</td>
                         <td width="90%"><input style="width:inherit;"
                                                class="form-control form-control-sm" type="text"
                                                id="magic6"/></td>
