--- a/tmtk/arborist/static/mainstyle.css
+++ b/tmtk/arborist/static/mainstyle.css
@@ -16,6 +16,7 @@ body, div.container {
   height: 100%;
 }
 div#treeanddetails {
+  background: white;
   border: 1px solid silver;
   height: 100%;
   min-height: 450px;
@@ -30,6 +31,7 @@ div#details {
   width: 43%;
   height: 100%;
   float: right;
+  padding: 5px;
   position: relative;
 }
 div#bottom-btns {
