--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -121,6 +121,9 @@
             <button type="button" class="btn btn-sm btn-danger" id="embeded_return">Exit</button>
         </div>
     </div>
+    <div class="alert alert-info fade show" id="myAlert" role="alert">
+      <strong><span id="alert-text"></span></strong>
+    </div>
 </div>
 
 <script type="application/javascript">
