Better support for tags, improved styling

--- a/tmtk/arborist/static/mainstyle.css
+++ b/tmtk/arborist/static/mainstyle.css
@@ -1,12 +1,9 @@
+/* tmtk specific stuff */
 html {
   height: calc(100% - 125px);
 }
 body, div.container {
   height: 100%;
-}
-legend {
-  font-size: 1.6em;
-  text-align: center;
 }
 div#treeanddetails {
   background: white;
@@ -16,112 +13,81 @@ div#treeanddetails {
   position: relative;
   overflow: hidden;
 }
-div#outer-tree-div {
- overflow: hidden;
- width: 57%;
- height: 100%;
- float: left;
- position: relative;
+div#details {
+  width: 43%;
+  height: 100%;
+  float: right;
+  position: relative;
+  border-left: 2px lightsteelblue solid;
+}
+input#search-box {
+  width: 125px;
+  margin: 5px;
 }
 div#tree-div {
   position: absolute;
-  top: 0;
+  top: 0px;
   bottom: 0;
   left: 0;
   right: -17px;
   overflow-y: scroll;
 }
-div#details {
-  width: 43%;
+.header-bar {
+  background-color: lightsteelblue;
+  height: 46px;
+  line-height: 46px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.header-title {
+  line-height: inherit;
+  font-size: 24px;
+  font-weight: bold;
+  padding-left: 10px;
+  display: inline-block;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.blockform {
+  height: 95%;
+  padding: 10px 5px 5px 10px;
+}
+/* Shared between tmtk and baas*/
+#search_spinner {
+  position: absolute;
+  right: 9px;
+  top: 9px;
+  width: 28px;
+  height: 28px;
+}
+div#search-container {
+  display: inline-block;
+  right: 0;
+  position: absolute;
+}
+div#outer-tree-div {
+  overflow: hidden;
+  width: 57%;
   height: 100%;
-  float: right;
-  padding: 5px;
+  float: left;
   position: relative;
 }
 div#bottom-btns {
   position: absolute;
   bottom: 0;
   height: 40px;
-  right: 0px;
-}
-li.error {
-  background: url('/static/images/message/error.png') no-repeat left top;
-  padding: 0px 0px 0px 20px;
-  list-style: none;
-}
-li.warning {
-  background: url('/static/images/message/warning.png') no-repeat left top;
-  padding: 0px 0px 0px 20px;
-  list-style: none;
-}
-li.message {
-  background: url('/static/images/message/info.png') no-repeat left top;
-  padding: 0px 0px 0px 20px;
-  list-style: none;
-}
-input#search_box{
-  position: absolute;
-  margin-top: 15px;
-  margin-right: 15px;
-  right: 100%;
-  width: 40%;
-  z-index: 99;
-}
-#search_spinner{
-  position: absolute;
-  margin-top: 24px;
-  margin-right: 25px;
-  right: 100%;
-  width: 20px;
-  z-index: 99;
+  right: 0;
 }
 .jstree-default .jstree-search {
   font-style: italic;
-  color: #5cb85c;
-  font-weight: bold;
+  color: tomato;
 }
 .hdtagdata {
   margin-left: 5px;
   margin-top: 15px;
   font-size: smaller;
-}
-.blockform {
-  height: 100%;
-}
-.tag-container {
-  max-height: calc(100% - 136px);
-  position: inherit;
-  overflow-y: scroll;
-  border-top: silver 2px solid;
-  border-bottom: silver 2px solid;
-}
-.tag-title {
-  width: 100%;
-  margin-top: 5px;
-  border-bottom-left-radius: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-}
-.tag-weight {
-  margin-top: 5px;
-  border-bottom-left-radius: 0px;
-  border-top-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-}
-.tag-description {
-  width: 100%;
-  margin-bottom: 5px;
-  max-height: 128px;
-  border-top-right-radius: 0px;
-  border-top-left-radius: 0px;
-}
-.table-striped>tbody>tr:nth-child(4n+1)>td,
-.table-striped>tbody>tr:nth-child(4n+2)>td
-{    background-color: #FFFFFF;
-}
-.table-striped>tbody>tr:nth-child(4n+3)>td,
-.table-striped>tbody>tr:nth-child(4n+4)>td
-{    background-color: #F6F6F6;
 }
 input#fc {
   width: inherit;
@@ -131,31 +97,94 @@ input#fc {
 input#apply-changes {
   margin-top: 15px;
 }
-span#feedback {
-    padding-right: 5px;
-}
 button#embeded_return {
   float: right;
   margin-right: 10px;
 }
-.dropup {
-  display: inline-block;
-  margin-right: 5px;
-}
 .fade {
-    opacity: 0;
-    -webkit-transition: opacity 0.1s linear;
-    -moz-transition: opacity 0.1s linear;
-    -o-transition: opacity 0.1s linear;
-    transition: opacity 0.1s linear;
+  opacity: 0;
+  -webkit-transition: opacity 0.1s linear;
+  -moz-transition: opacity 0.1s linear;
+  -o-transition: opacity 0.1s linear;
+  transition: opacity 0.1s linear;
 }
 .fade.in {
-    opacity: 1;
+  opacity: 1;
 }
 .alert {
   position: absolute;
-  max-width: 50%;
-  left: 28%;
+  max-width: 90%;
+  left: 50%;
   bottom: 50px;
   transform: translate(-50%, -50%);
+  z-index: 9999;
+}
+.jstree-default .jstree-wholerow-hovered {
+  background: #f6f6f6;
+}
+.jstree-default .jstree-wholerow-clicked {
+  background: lightsteelblue;
+}
+.jstree input:focus {
+  border-color: steelblue;
+  outline: 0 none;
+  background-color: #c1e0f6;
+  margin-left: -1px;
+}
+.tag-container {
+  max-height: calc(90% - 56px);
+  position: inherit;
+  overflow-y: scroll;
+}
+.tag-description {
+  height: 128px;
+  max-height: 196px;
+}
+.list-tag-title:empty::after {
+  content: 'Add title.';
+  font-size: x-small;
+}
+.list-tag-title {
+  font-weight: bolder;
+  margin-right: 16px;
+  font-size: small;
+  word-wrap: break-word;
+  max-width: 100%;
+}
+.list-tag-description:empty::after {
+  content: 'Add description.';
+  font-size: x-small;
+}
+.list-tag-description {
+  font-style: italic;
+  font-size: small;
+  word-wrap: break-word;
+  max-width: 100%;
+}
+.list-tag-row {
+  display: inline-block;
+  max-width: calc(100% + 15px);
+}
+.list-group-item.active {
+  background-color: #373a3c;
+  border-color: #000;
+}
+.list-group-item.active:hover {
+  background-color: #373a3c;
+  border-color: #000;
+}
+.list-group-item.active .list-tag-description {
+  color: rgba(255, 255, 255, 0.5);
+}
+.list-group-item.active:hover .list-tag-description {
+  color: rgba(255, 255, 255, 0.5);
+}
+.popover {
+  width: 80%;
+}
+.popover-title {
+  background-color: #373a3c;
+}
+h3.popover-title {
+  color: rgba(255, 255, 255, 0.5);
 }
